<resources>
    <string name="app_name">favorite_country</string>
    <string name="country_add">선호 국가 추가</string>
    <string name="country">국가명</string>
    <string name="country_eng">영문명 :&#160;</string>
    <string name="capital">수도 :&#160;</string>
    <string name="continent">대륙 :&#160;</string>
    <string name="language">공용어 :&#160;</string>
    <string name="currency">화폐 :&#160;</string>
    <string name="religion">주 종교 :&#160;</string>
    <string name="country_info_btn">more</string>
    <string name="country_info">국가 상세정보</string>
    <string name="country_warning">국가 여행경보 확인하기</string>
    <string name="country_add_btn">Add Country</string>
    <string name="recent">최근 여행객의 포스트</string>
</resources>
