<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/flag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <TextView
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/flag"
            android:text="@string/country"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <TextView
            android:id="@+id/country_eng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/country"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_toRightOf="@id/country"
            android:text="@string/country_eng" />

        <TextView
            android:id="@+id/capital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/country"
            android:layout_alignLeft="@id/country"
            android:text="@string/capital" />

        <Button
            android:id="@+id/button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_toRightOf="@id/country_eng"
            android:text="@string/country_add_btn" />
    </RelativeLayout>

</LinearLayout>